# flatstudio

./: CMakeLists.txt
src/: Utils.h  main.cpp
src/audio/: AudioSystem.cpp  AudioSystem.hpp  AudioSystemSettings.cpp  AudioSystemSettings.hpp
src/audio/component/: Channel.cpp  Channel.hpp  Mixer.cpp  Mixer.hpp
src/project/: Workspace.cpp  Workspace.hpp
